# dagster-poc

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  test_data.csv  test_data.json  workspace.yaml
.claude/: settings.json
.tmp_dagster_home_0uzno_i9/history/: runs.db
.tmp_dagster_home_4si0iqek/history/: runs.db
.tmp_dagster_home_d_vw4sxe/history/: runs.db
.tmp_dagster_home_rioaqp01/history/: runs.db
.tmp_dagster_home_uzqnh02b/history/: runs.db
.tmp_dagster_home_x5xf5z17/history/: runs.db
.tmp_dagster_home_zxea1_x4/history/: runs.db
dagster_poc/: __init__.py  resources.py
dagster_poc/jobs/: __init__.py  fargate_job.py  lambda_job.py
dagster_poc/ops/: __init__.py  fargate_ops.py  lambda_ops.py
dagster_poc/sensors/: __init__.py  sqs_sensor.py
dagster_ts/: package-lock.json  package.json
dagster_ts/src/: dashboard.ts  fargate-cli.ts  fargate-ops.ts  index.ts  lambda-cli.ts  lambda-ops.ts  resources.ts  s3-sensor.ts  sensor-cli.ts  sensor.ts
docs/: legacy-sftp-sync-setup.md  setup-sftp-sync-ceb-sftp-01.md
infra/: Pulumi.dev.yaml  Pulumi.sand.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
scripts/: check-pipeline-status.sh  seed-dataset-registry.sh  setup-cross-account-s3.sh
scripts/sftp-standalone/: INSTALACION.md  Sync-BoardFilesToS3.ps1  Sync-LegacySFTP-ToS3.ps1  deploy-sync-script.sh  log.txt  script.ps1
scripts/test-files/: invalid_no_date.csv  large-file.json  small-file.json  test-file.xls  test-file.xlsx  valid_board_file.csv
worker/: Dockerfile  package-lock.json  package.json
(+23 files in other folders)
