[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-poc"
version = "0.1.0"
description = "POC de Dagster para disparar tareas en AWS Fargate"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "dagster-aws>=0.22.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "dagster-webserver",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.dagster]
module_name = "dagster_poc"
